# ggt_kgv_rechner_tauri

./: README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
